[package]
name = "subx-address"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["secrets","json"] }
serde = { version = "1.0", features = ["derive"] }
sp-core = "21.0.0"
sp-runtime = "24.0.0"
passwords = "3.1.3"
#bip39 = "1.0.0-rc1"
bip0039 = "0.11.0"
rand = "0.8.4"